--- a/views/templates/equipamento.html
+++ b/views/templates/equipamento.html
@@ -115,33 +115,31 @@
               <div class="container">
                 <div class="row">
                   <!--Cards para o dash-->
-
                       <div class="container mt-4">
                           <div class="row">
                               <!-- Card 1 (col-12 em dispositivos pequenos e col-lg-3 em dispositivos maiores) -->
-                              <div class="col-12 col-lg-3 mb-4">
-                                  <div class="card">
+                              <div class="col-12 col-lg-3 mb-4 dashBodyCard" >
+                                  <div class="card ">
                                       <div class="row">
                                           <div class="col-4">
                                               <img src="../../img/imgPlacaRepair.jpg" class="card-img" alt="Imagem 1">
                                           </div>
                                           <div class="col-8">
-                                              <div class="card-body">
+                                              <div class="card-body ">
                                                   <h5 class="card-title">CADASTRADOS</h5>
-                                                  <p class="card-text">186</p>
+                                                  <p class="card-text" >186</p>
                                               </div>
                                           </div>
                                       </div>
                                       <div class="row">
-                                        <div class="col-12 text-center pb-2 pt-0 ml-0">
-                                          <button type="button" class="btn btn-success w-75 rounded-0"><i class="bi bi-bag-plus-fill"></i> Cadastrar</button>
+                                        <div>
+                                          <button type="button" class="btn btn-success"><i class="bi bi-bag-plus"></i> Cadastrar</button>
                                         </div>
                                       </div>
                                   </div>
                               </div>
-                              
                               <!-- Card 2 (col-12 em dispositivos pequenos e col-lg-3 em dispositivos maiores) -->
-                              <div class="col-12 col-lg-3 mb-4">
+                              <div class="col-12 col-lg-3 mb-4 dashBodyCard">
                                   <div class="card">
                                       <div class="row">
                                           <div class="col-4">
@@ -155,16 +153,14 @@
                                           </div>
                                       </div>
                                       <div class="row">
-                                        <div class="col-12 text-center pb-2 pt-0 ml-0">
-                                          <button type="button" class="btn btn-success w-75 rounded-0"><i class="bi bi-plus-circle"></i> Instalar</button>
+                                        <div>
+                                          <button type="button" class="btn btn-success"><i class="bi bi-plus-circle"></i> Instalar</button>
                                         </div>
                                       </div>
                                   </div>
-                                  
                               </div>
-                              
                               <!-- Card 3 (col-12 em dispositivos pequenos e col-lg-3 em dispositivos maiores) -->
-                              <div class="col-12 col-lg-3 mb-4">
+                              <div class="col-12 col-lg-3 mb-4 dashBodyCard">
                                   <div class="card">
                                       <div class="row">
                                           <div class="col-4">
@@ -178,15 +174,15 @@
                                           </div>
                                       </div>
                                       <div class="row">
-                                        <div class="col-12 text-center pb-2 pt-0 ml-0">
-                                          <button type="button" class="btn btn-warning w-75 rounded-0"><i class="bi bi-gear"></i> Atender</button>
+                                        <div>
+                                          <button type="button" class="btn btn-warning "><i class="bi bi-gear"></i> Atender</button>
                                         </div>
                                       </div>
                                   </div>
                               </div>
                               
                               <!-- Card 4 (col-12 em dispositivos pequenos e col-lg-3 em dispositivos maiores) -->
-                              <div class="col-12 col-lg-3 mb-4">
+                              <div class="col-12 col-lg-3 mb-4 dashBodyCard">
                                   <div class="card">
                                       <div class="row">
                                           <div class="col-4">
@@ -200,19 +196,117 @@
                                           </div>
                                       </div>
                                       <div class="row">
-                                        <div class="col-12 text-center pb-2 pt-0 ml-0">
-                                          <button type="button" class="btn btn-danger w-75 rounded-0"><i class="bi bi-trash3"></i> Descartar</button>
+                                        <div>
+                                          <button type="button" class="btn btn-danger"><i class="bi bi-trash3"></i> Descartar</button>
                                         </div>
                                       </div>
                                   </div>
                               </div>
                           </div>
                       </div>
-
-                  
-
+               <!--fim dos cards-->
 
 
+              <!-- Espaco do card tabel view -->
+
+                  <div class="container mt-4">
+                      <div class="row">
+                          <div class="col-12 col-lg-6 mb-4">
+                              <div class="card">
+                                  <div class="card-body">
+                                      <h5 class="card-title">Busca</h5>
+                                      <div class="row">
+                                        <div class="col-6">
+                                          <div class="form-group">
+                                            <label for="selecao">Selecionar:</label>
+                                            <select id="selecao" class="form-control">
+                                                <option value="opcao0"> </option>
+                                                <option value="opcao1">COMPUTARDOR</option>
+                                                <option value="opcao2">MONITOR</option>
+                                                <option value="opcao3">IMPRESSORA</option>
+                                                <option value="opcao3">SCANNER</option>
+                                            </select>
+                                        </div>
+                                        </div>
+                                        <div class="col-6 pt-4">
+                                          <div class="input-group mb-3">
+                                              <input type="text" class="form-control" placeholder="Digite sua busca" aria-label="Digite sua busca" aria-describedby="button-addon">
+                                              <button class="btn btn-outline-secondary" type="button" id="button-addon">Buscar</button>
+                                          </div>                                          
+                                        </div>
+                                      </div>
+                                  </div>
+                              </div>
+                              
+                          </div>
+                          <div class="col-12 col-lg-6 mb-4">
+                              <div class="card">
+                                  <div class="card-body pt-0" style="max-height: 300px; overflow-y: scroll;">
+                                      <!--<h5 class="card-title">Tabela Resultante</h5>-->
+                                      <table class="table table-container">
+                                          <thead class="table-header">
+                                              <tr>
+                                                  <th scope="col">Nº SERIAL</th>
+                                                  <th scope="col">PATRIMÔNIO</th>
+                                                  <th scope="col">CÓD. PRODUTO</th>
+                                                  <th scope="col">NOME</th>
+                                              </tr>
+                                          </thead>
+                                          <tbody>
+                                              <!-- Aqui você pode gerar as linhas da tabela dinamicamente -->
+                                              <tr>
+                                                  <td>26YB45TW1789</td>
+                                                  <td>004847</td>
+                                                  <td>BX36M4678TY</td>
+                                                  <td>BR-SECRE-01</td>
+                                              </tr>
+                                              <!-- Adicione mais linhas conforme necessário -->
+                                                      <tr>
+                                                        <td>26YB45TW1789</td>
+                                                        <td>004847</td>
+                                                        <td>BX36M4678TY</td>
+                                                        <td>BR-SECRE-01</td>
+                                                    </tr>
+                                                      <tr>
+                                                        <td>26YB45TW1789</td>
+                                                        <td>004847</td>
+                                                        <td>BX36M4678TY</td>
+                                                        <td>BR-SECRE-01</td>
+                                                    </tr>
+                                                    <tr>
+                                                      <td>26YB45TW1789</td>
+                                                      <td>004847</td>
+                                                      <td>BX36M4678TY</td>
+                                                      <td>BR-SECRE-01</td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td>26YB45TW1789</td>
+                                                    <td>004847</td>
+                                                    <td>BX36M4678TY</td>
+                                                    <td>BR-SECRE-01</td>
+                                                </tr>
+                                                <tr>
+                                                  <td>26YB45TW1789</td>
+                                                  <td>004847</td>
+                                                  <td>BX36M4678TY</td>
+                                                  <td>BR-SECRE-01</td>
+                                              </tr>
+                                              <tr>
+                                                <td>26YB45TW1789</td>
+                                                <td>004847</td>
+                                                <td>BX36M4678TY</td>
+                                                <td>BR-SECRE-01</td>
+                                            </tr>
+                                          </tbody>
+                                      </table>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              
+
+              
 
 
 
@@ -226,10 +320,11 @@
 
 
 
+              <!-- FIM CARD TABELA-->
 
 
 
-                  <!--fim dos cards-->
+
 
               </div>
             </div>
